--- a/Milkshake/style.css
+++ b/Milkshake/style.css
@@ -24,6 +24,10 @@ body {
   margin: 0;
 }
 
+.menu {
+  font-weight: bold;
+}
+
 /*class selector*/
 .container {
   /*Adjusts the element to flex*/
